# tauri-plugin-push-notifications

./: Cargo.toml  README.md
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/: FCMService.kt  PushNotificationsPlugin.kt
ios/Sources/: PushNotificationsPlugin.swift
src/: lib.rs
webview-src/: index.ts  package.json
