[package]
name = "tauri-plugin-push-notifications"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"] # TODO: Replace with actual author info
description = "Push notifications plugin for Tauri"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"

[dependencies]
tauri = { version = "2.0.0-beta", features = ["ios-proxy-delegate"] } # Using beta for ios-proxy-delegate
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2.0.0-beta" }

[lib]
name = "tauri_plugin_push_notifications"
crate-type = ["staticlib", "cdylib", "rlib"]
